src/parser.output
   0  $accept : %entry% $end

   1  quote : QUOTE

   2  file : QUOTE

   3  source : decls EOF

   4  decls : decl EOL
   5        | decl EOL decls

   6  decl : NONTERM DEF prod
   7       | NONTERM ASSIGN prod

   8  op : PLUS
   9     | MINUS

  10  modif : op
  11        | op modif

  12  atom : atom_

  13  seq : seq_

  14  prod : prod_

  15  atom_ : terminal
  16        | unfoldable
  17        | GT unfoldable
  18        | LT unfoldable
  19        | atom DOT
  20        | atom DOTLABEL
  21        | atom DOTBRA labels KET

  22  terminal : term
  23           | CAP
  24           | UNDERSCORE
  25           | BACKSLASH

  26  unfoldable : path
  27             | BRA sub KET
  28             | BRA sub KET PLUS
  29             | SQBRA sub SQKET
  30             | CBRA sub CKET
  31             | GTGT sub LTLT

  32  sub : prod
  33      | NONTERM DEF prod EOL prod
  34      | NONTERM DEF prod EOL sub
  35      | NONTERM ASSIGN prod EOL prod
  36      | NONTERM ASSIGN prod EOL sub
  37      | IMPORT file AS NONTERM EOL prod
  38      | IMPORT file AS NONTERM EOL sub

  39  atoms : atom
  40        | atom COMMA atoms

  41  seq0 : atoms
  42       | atoms seq0

  43  seq_ : seq0
  44       | label COLON seq0

  45  modif_seq : seq
  46            | modif seq

  47  prod0 : modif_seq
  48        | modif_seq PIPE prod0

  49  prod_ : prod0

  50  label : NONTERM
  51        | TERM

  52  modif_label : label
  53              | modif label

  54  multilabels : modif_label
  55              | modif_label PIPE multilabels

  56  labels : multilabels

  57  term : TERM
  58       | QUOTE
  59       | IMPORT
  60       | AS

  61  path : NONTERM
  62       | path SLASH NONTERM

  63  %entry% : '\001' source
  64          | '\002' quote

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . source  (63)

	NONTERM  shift 4
	.  error

	source  goto 5
	decls  goto 6
	decl  goto 7


state 2
	%entry% : '\002' . quote  (64)

	QUOTE  shift 8
	.  error

	quote  goto 9


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	decl : NONTERM . DEF prod  (6)
	decl : NONTERM . ASSIGN prod  (7)

	DEF  shift 10
	ASSIGN  shift 11
	.  error


state 5
	%entry% : '\001' source .  (63)

	.  reduce 63


state 6
	source : decls . EOF  (3)

	EOF  shift 12
	.  error


state 7
	decls : decl . EOL  (4)
	decls : decl . EOL decls  (5)

	EOL  shift 13
	.  error


state 8
	quote : QUOTE .  (1)

	.  reduce 1


state 9
	%entry% : '\002' quote .  (64)

	.  reduce 64


state 10
	decl : NONTERM DEF . prod  (6)

	NONTERM  shift 14
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	prod  goto 30
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 11
	decl : NONTERM ASSIGN . prod  (7)

	NONTERM  shift 14
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	prod  goto 47
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 12
	source : decls EOF .  (3)

	.  reduce 3


state 13
	decls : decl EOL .  (4)
	decls : decl EOL . decls  (5)

	NONTERM  shift 4
	EOF  reduce 4

	decls  goto 48
	decl  goto 7


state 14
	label : NONTERM .  (50)
	path : NONTERM .  (61)

	EOL  reduce 61
	NONTERM  reduce 61
	TERM  reduce 61
	QUOTE  reduce 61
	DOTLABEL  reduce 61
	PIPE  reduce 61
	SQBRA  reduce 61
	SQKET  reduce 61
	BRA  reduce 61
	KET  reduce 61
	GT  reduce 61
	GTGT  reduce 61
	CBRA  reduce 61
	CKET  reduce 61
	DOT  reduce 61
	COMMA  reduce 61
	COLON  reduce 50
	CAP  reduce 61
	UNDERSCORE  reduce 61
	DOTBRA  reduce 61
	BACKSLASH  reduce 61
	LTLT  reduce 61
	LT  reduce 61
	IMPORT  reduce 61
	AS  reduce 61
	SLASH  reduce 61


state 15
	label : TERM .  (51)
	term : TERM .  (57)

	EOL  reduce 57
	NONTERM  reduce 57
	TERM  reduce 57
	QUOTE  reduce 57
	DOTLABEL  reduce 57
	PIPE  reduce 57
	SQBRA  reduce 57
	SQKET  reduce 57
	BRA  reduce 57
	KET  reduce 57
	GT  reduce 57
	GTGT  reduce 57
	CBRA  reduce 57
	CKET  reduce 57
	DOT  reduce 57
	COMMA  reduce 57
	COLON  reduce 51
	CAP  reduce 57
	UNDERSCORE  reduce 57
	DOTBRA  reduce 57
	BACKSLASH  reduce 57
	LTLT  reduce 57
	LT  reduce 57
	IMPORT  reduce 57
	AS  reduce 57


state 16
	term : QUOTE .  (58)

	.  reduce 58


state 17
	unfoldable : SQBRA . sub SQKET  (29)

	NONTERM  shift 49
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 50
	AS  shift 29
	.  error

	prod  goto 51
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	sub  goto 52
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 18
	unfoldable : BRA . sub KET  (27)
	unfoldable : BRA . sub KET PLUS  (28)

	NONTERM  shift 49
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 50
	AS  shift 29
	.  error

	prod  goto 51
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	sub  goto 53
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 19
	atom_ : GT . unfoldable  (17)

	NONTERM  shift 54
	SQBRA  shift 17
	BRA  shift 18
	GTGT  shift 20
	CBRA  shift 21
	.  error

	unfoldable  goto 55
	path  goto 41


state 20
	unfoldable : GTGT . sub LTLT  (31)

	NONTERM  shift 49
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 50
	AS  shift 29
	.  error

	prod  goto 51
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	sub  goto 56
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 21
	unfoldable : CBRA . sub CKET  (30)

	NONTERM  shift 49
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 50
	AS  shift 29
	.  error

	prod  goto 51
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	sub  goto 57
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 22
	op : PLUS .  (8)

	.  reduce 8


state 23
	op : MINUS .  (9)

	.  reduce 9


state 24
	terminal : CAP .  (23)

	.  reduce 23


state 25
	terminal : UNDERSCORE .  (24)

	.  reduce 24


state 26
	terminal : BACKSLASH .  (25)

	.  reduce 25


state 27
	atom_ : LT . unfoldable  (18)

	NONTERM  shift 54
	SQBRA  shift 17
	BRA  shift 18
	GTGT  shift 20
	CBRA  shift 21
	.  error

	unfoldable  goto 58
	path  goto 41


state 28
	term : IMPORT .  (59)

	.  reduce 59


state 29
	term : AS .  (60)

	.  reduce 60


state 30
	decl : NONTERM DEF prod .  (6)

	.  reduce 6


state 31
	modif : op .  (10)
	modif : op . modif  (11)

	PLUS  shift 22
	MINUS  shift 23
	NONTERM  reduce 10
	TERM  reduce 10
	QUOTE  reduce 10
	SQBRA  reduce 10
	BRA  reduce 10
	GT  reduce 10
	GTGT  reduce 10
	CBRA  reduce 10
	CAP  reduce 10
	UNDERSCORE  reduce 10
	BACKSLASH  reduce 10
	LT  reduce 10
	IMPORT  reduce 10
	AS  reduce 10

	op  goto 31
	modif  goto 59


state 32
	modif_seq : modif . seq  (46)

	NONTERM  shift 14
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	atom  goto 33
	atom_  goto 34
	seq  goto 60
	seq_  goto 36
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 43
	label  goto 44


state 33
	atom_ : atom . DOT  (19)
	atom_ : atom . DOTLABEL  (20)
	atom_ : atom . DOTBRA labels KET  (21)
	atoms : atom .  (39)
	atoms : atom . COMMA atoms  (40)

	DOTLABEL  shift 61
	DOT  shift 62
	COMMA  shift 63
	DOTBRA  shift 64
	EOL  reduce 39
	NONTERM  reduce 39
	TERM  reduce 39
	QUOTE  reduce 39
	PIPE  reduce 39
	SQBRA  reduce 39
	SQKET  reduce 39
	BRA  reduce 39
	KET  reduce 39
	GT  reduce 39
	GTGT  reduce 39
	CBRA  reduce 39
	CKET  reduce 39
	CAP  reduce 39
	UNDERSCORE  reduce 39
	BACKSLASH  reduce 39
	LTLT  reduce 39
	LT  reduce 39
	IMPORT  reduce 39
	AS  reduce 39


state 34
	atom : atom_ .  (12)

	.  reduce 12


state 35
	modif_seq : seq .  (45)

	.  reduce 45


state 36
	seq : seq_ .  (13)

	.  reduce 13


state 37
	prod : prod_ .  (14)

	.  reduce 14


state 38
	atom_ : terminal .  (15)

	.  reduce 15


state 39
	atom_ : unfoldable .  (16)

	.  reduce 16


state 40
	terminal : term .  (22)

	.  reduce 22


state 41
	unfoldable : path .  (26)
	path : path . SLASH NONTERM  (62)

	SLASH  shift 65
	EOL  reduce 26
	NONTERM  reduce 26
	TERM  reduce 26
	QUOTE  reduce 26
	DOTLABEL  reduce 26
	PIPE  reduce 26
	SQBRA  reduce 26
	SQKET  reduce 26
	BRA  reduce 26
	KET  reduce 26
	GT  reduce 26
	GTGT  reduce 26
	CBRA  reduce 26
	CKET  reduce 26
	DOT  reduce 26
	COMMA  reduce 26
	CAP  reduce 26
	UNDERSCORE  reduce 26
	DOTBRA  reduce 26
	BACKSLASH  reduce 26
	LTLT  reduce 26
	LT  reduce 26
	IMPORT  reduce 26
	AS  reduce 26


state 42
	seq0 : atoms .  (41)
	seq0 : atoms . seq0  (42)

	NONTERM  shift 54
	TERM  shift 66
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	EOL  reduce 41
	PIPE  reduce 41
	SQKET  reduce 41
	KET  reduce 41
	CKET  reduce 41
	LTLT  reduce 41

	atom  goto 33
	atom_  goto 34
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 67


state 43
	seq_ : seq0 .  (43)

	.  reduce 43


state 44
	seq_ : label . COLON seq0  (44)

	COLON  shift 68
	.  error


state 45
	prod0 : modif_seq .  (47)
	prod0 : modif_seq . PIPE prod0  (48)

	PIPE  shift 69
	EOL  reduce 47
	SQKET  reduce 47
	KET  reduce 47
	CKET  reduce 47
	LTLT  reduce 47


state 46
	prod_ : prod0 .  (49)

	.  reduce 49


state 47
	decl : NONTERM ASSIGN prod .  (7)

	.  reduce 7


state 48
	decls : decl EOL decls .  (5)

	.  reduce 5


state 49
	sub : NONTERM . DEF prod EOL prod  (33)
	sub : NONTERM . DEF prod EOL sub  (34)
	sub : NONTERM . ASSIGN prod EOL prod  (35)
	sub : NONTERM . ASSIGN prod EOL sub  (36)
	label : NONTERM .  (50)
	path : NONTERM .  (61)

	DEF  shift 70
	ASSIGN  shift 71
	NONTERM  reduce 61
	TERM  reduce 61
	QUOTE  reduce 61
	DOTLABEL  reduce 61
	PIPE  reduce 61
	SQBRA  reduce 61
	SQKET  reduce 61
	BRA  reduce 61
	KET  reduce 61
	GT  reduce 61
	GTGT  reduce 61
	CBRA  reduce 61
	CKET  reduce 61
	DOT  reduce 61
	COMMA  reduce 61
	COLON  reduce 50
	CAP  reduce 61
	UNDERSCORE  reduce 61
	DOTBRA  reduce 61
	BACKSLASH  reduce 61
	LTLT  reduce 61
	LT  reduce 61
	IMPORT  reduce 61
	AS  reduce 61
	SLASH  reduce 61


50: shift/reduce conflict (shift 72, reduce 59) on QUOTE
state 50
	sub : IMPORT . file AS NONTERM EOL prod  (37)
	sub : IMPORT . file AS NONTERM EOL sub  (38)
	term : IMPORT .  (59)

	QUOTE  shift 72
	NONTERM  reduce 59
	TERM  reduce 59
	DOTLABEL  reduce 59
	PIPE  reduce 59
	SQBRA  reduce 59
	SQKET  reduce 59
	BRA  reduce 59
	KET  reduce 59
	GT  reduce 59
	GTGT  reduce 59
	CBRA  reduce 59
	CKET  reduce 59
	DOT  reduce 59
	COMMA  reduce 59
	CAP  reduce 59
	UNDERSCORE  reduce 59
	DOTBRA  reduce 59
	BACKSLASH  reduce 59
	LTLT  reduce 59
	LT  reduce 59
	IMPORT  reduce 59
	AS  reduce 59

	file  goto 73


state 51
	sub : prod .  (32)

	.  reduce 32


state 52
	unfoldable : SQBRA sub . SQKET  (29)

	SQKET  shift 74
	.  error


state 53
	unfoldable : BRA sub . KET  (27)
	unfoldable : BRA sub . KET PLUS  (28)

	KET  shift 75
	.  error


state 54
	path : NONTERM .  (61)

	.  reduce 61


state 55
	atom_ : GT unfoldable .  (17)

	.  reduce 17


state 56
	unfoldable : GTGT sub . LTLT  (31)

	LTLT  shift 76
	.  error


state 57
	unfoldable : CBRA sub . CKET  (30)

	CKET  shift 77
	.  error


state 58
	atom_ : LT unfoldable .  (18)

	.  reduce 18


state 59
	modif : op modif .  (11)

	.  reduce 11


state 60
	modif_seq : modif seq .  (46)

	.  reduce 46


state 61
	atom_ : atom DOTLABEL .  (20)

	.  reduce 20


state 62
	atom_ : atom DOT .  (19)

	.  reduce 19


state 63
	atoms : atom COMMA . atoms  (40)

	NONTERM  shift 54
	TERM  shift 66
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	atom  goto 33
	atom_  goto 34
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 78


state 64
	atom_ : atom DOTBRA . labels KET  (21)

	NONTERM  shift 79
	TERM  shift 80
	PLUS  shift 22
	MINUS  shift 23
	.  error

	op  goto 31
	modif  goto 81
	labels  goto 82
	label  goto 83
	modif_label  goto 84
	multilabels  goto 85


state 65
	path : path SLASH . NONTERM  (62)

	NONTERM  shift 86
	.  error


state 66
	term : TERM .  (57)

	.  reduce 57


state 67
	seq0 : atoms seq0 .  (42)

	.  reduce 42


state 68
	seq_ : label COLON . seq0  (44)

	NONTERM  shift 54
	TERM  shift 66
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	atom  goto 33
	atom_  goto 34
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 87


state 69
	prod0 : modif_seq PIPE . prod0  (48)

	NONTERM  shift 14
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 88


state 70
	sub : NONTERM DEF . prod EOL prod  (33)
	sub : NONTERM DEF . prod EOL sub  (34)

	NONTERM  shift 14
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	prod  goto 89
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 71
	sub : NONTERM ASSIGN . prod EOL prod  (35)
	sub : NONTERM ASSIGN . prod EOL sub  (36)

	NONTERM  shift 14
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 28
	AS  shift 29
	.  error

	prod  goto 90
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 72
	file : QUOTE .  (2)

	.  reduce 2


state 73
	sub : IMPORT file . AS NONTERM EOL prod  (37)
	sub : IMPORT file . AS NONTERM EOL sub  (38)

	AS  shift 91
	.  error


state 74
	unfoldable : SQBRA sub SQKET .  (29)

	.  reduce 29


state 75
	unfoldable : BRA sub KET .  (27)
	unfoldable : BRA sub KET . PLUS  (28)

	PLUS  shift 92
	EOL  reduce 27
	NONTERM  reduce 27
	TERM  reduce 27
	QUOTE  reduce 27
	DOTLABEL  reduce 27
	PIPE  reduce 27
	SQBRA  reduce 27
	SQKET  reduce 27
	BRA  reduce 27
	KET  reduce 27
	GT  reduce 27
	GTGT  reduce 27
	CBRA  reduce 27
	CKET  reduce 27
	DOT  reduce 27
	COMMA  reduce 27
	CAP  reduce 27
	UNDERSCORE  reduce 27
	DOTBRA  reduce 27
	BACKSLASH  reduce 27
	LTLT  reduce 27
	LT  reduce 27
	IMPORT  reduce 27
	AS  reduce 27


state 76
	unfoldable : GTGT sub LTLT .  (31)

	.  reduce 31


state 77
	unfoldable : CBRA sub CKET .  (30)

	.  reduce 30


state 78
	atoms : atom COMMA atoms .  (40)

	.  reduce 40


state 79
	label : NONTERM .  (50)

	.  reduce 50


state 80
	label : TERM .  (51)

	.  reduce 51


state 81
	modif_label : modif . label  (53)

	NONTERM  shift 79
	TERM  shift 80
	.  error

	label  goto 93


state 82
	atom_ : atom DOTBRA labels . KET  (21)

	KET  shift 94
	.  error


state 83
	modif_label : label .  (52)

	.  reduce 52


state 84
	multilabels : modif_label .  (54)
	multilabels : modif_label . PIPE multilabels  (55)

	PIPE  shift 95
	KET  reduce 54


state 85
	labels : multilabels .  (56)

	.  reduce 56


state 86
	path : path SLASH NONTERM .  (62)

	.  reduce 62


state 87
	seq_ : label COLON seq0 .  (44)

	.  reduce 44


state 88
	prod0 : modif_seq PIPE prod0 .  (48)

	.  reduce 48


state 89
	sub : NONTERM DEF prod . EOL prod  (33)
	sub : NONTERM DEF prod . EOL sub  (34)

	EOL  shift 96
	.  error


state 90
	sub : NONTERM ASSIGN prod . EOL prod  (35)
	sub : NONTERM ASSIGN prod . EOL sub  (36)

	EOL  shift 97
	.  error


state 91
	sub : IMPORT file AS . NONTERM EOL prod  (37)
	sub : IMPORT file AS . NONTERM EOL sub  (38)

	NONTERM  shift 98
	.  error


state 92
	unfoldable : BRA sub KET PLUS .  (28)

	.  reduce 28


state 93
	modif_label : modif label .  (53)

	.  reduce 53


state 94
	atom_ : atom DOTBRA labels KET .  (21)

	.  reduce 21


state 95
	multilabels : modif_label PIPE . multilabels  (55)

	NONTERM  shift 79
	TERM  shift 80
	PLUS  shift 22
	MINUS  shift 23
	.  error

	op  goto 31
	modif  goto 81
	label  goto 83
	modif_label  goto 84
	multilabels  goto 99


state 96
	sub : NONTERM DEF prod EOL . prod  (33)
	sub : NONTERM DEF prod EOL . sub  (34)

	NONTERM  shift 49
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 50
	AS  shift 29
	.  error

	prod  goto 100
	op  goto 31
	modif  goto 32
	atom  goto 33
	atom_  goto 34
	seq  goto 35
	seq_  goto 36
	prod_  goto 37
	terminal  goto 38
	unfoldable  goto 39
	term  goto 40
	path  goto 41
	sub  goto 101
	atoms  goto 42
	seq0  goto 43
	label  goto 44
	modif_seq  goto 45
	prod0  goto 46


state 97
	sub : NONTERM ASSIGN prod EOL . prod  (35)
	sub : NONTERM ASSIGN prod EOL . sub  (36)

	NONTERM  shift 49
	TERM  shift 15
	QUOTE  shift 16
	SQBRA  shift 17
	BRA  shift 18
	GT  shift 19
	GTGT  shift 20
	CBRA  shift 21
	PLUS  shift 22
	MINUS  shift 23
	CAP  shift 24
	UNDERSCORE  shift 25
	BACKSLASH  shift 26
	LT  shift 27
	IMPORT  shift 50
	AS  shift 29
	.  error
